fix: link to proper CSS file

--- a/src/malla/templates/base.html
+++ b/src/malla/templates/base.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Global 2025 theme overrides -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme-2025.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/malla.css') }}">
 
     <style>
         .navbar-brand {
