fix: enable coverage display on marker clusters in map template
- Updated the map.html template to set showCoverageOnHover to true for marker clusters, enhancing user experience by providing visual feedback on cluster coverage when hovered over.

--- a/src/malla/templates/map.html
+++ b/src/malla/templates/map.html
@@ -458,7 +458,7 @@ function initMap() {
     markerClusterGroup = L.markerClusterGroup({
         maxClusterRadius: 50, // Cluster markers within 50 pixels
         spiderfyOnMaxZoom: true,
-        showCoverageOnHover: false,
+        showCoverageOnHover: true,
         zoomToBoundsOnClick: true,
         iconCreateFunction: function(cluster) {
             const childCount = cluster.getChildCount();
